Fix M1/M2: Normalize testParams early with null-tolerant defensive copy
M1: Move defensive parameterization to runTestSuite before passing to
    executor/test/archiver, ensuring all downstream consumers receive an
    immutable, null-safe copy from that point on.

M2: Replace Map.copyOf with LinkedHashMap+unmodifiableMap pattern in both
    runTestSuite and TestRunTracker.register to tolerate null values,
    fixing the NullPointerException when testParams contained null values.

Add test verifying null values are handled without NPE.
Update comments to reflect the layered defense-in-depth approach.